<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ircSEX Messenger</string>
    <string name="dialog_generic_ok">OK</string>
    <string name="dialog_generic_connect">Connect</string>
    <string name="dialog_generic_cancel">Cancel</string>
    <string name="dialog_generic_close">Close</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_change_nick">Change nickname</string>
    <string name="noservers_not_connected">You\'re not connected to any servers yet :(</string>
    <string name="action_userlist">View users</string>
    <string name="add_server">Add server</string>
    <string name="hint_server">Server</string>
    <string name="hint_port">Port</string>
    <string name="hint_nickname">Nickname</string>
    <string name="action_leave_channel">Leave channel</string>
    <string name="action_invite_user">Invite user</string>
    <string name="join_channel">Join channel</string>
    <string name="hint_channel_name">Channel name</string>
    <string name="hint_join">Join</string>
    <string name="server_header_disconnect">Disconnect</string>
    <string name="server_header_reconnect">Reconnect</string>
    <string name="dialog_nick_title">Change nickname</string>
    <string name="dialog_nick_hint">New nickname on</string>
    <string name="dialog_connect_reconnect">Reconnecting to servers</string>
    <string name="dialog_connect_connecting">Connecting to</string>
    <string name="dialog_whois_title">Whois</string>
    <string name="dialog_whois_real_name">Real name</string>
    <string name="dialog_whois_idle_time">Idle time</string>
    <string name="dialog_whois_connected_to">Connected to</string>
    <string name="sendMessage">Send a message</string>
    <string name="dialog_invite_hint">User to invite</string>
    <string name="dialog_invite_title">Invite user</string>
    <string name="noservers_connect_button">Connect to a server</string>
    <string name="dialog_query_user_title">Send message to</string>
    <string name="dialog_query_user_hint">Recipient</string>
    <string name="search_messages">Search messages</string>
    <string name="pref_show_join_leave">Join and leave messages</string>
    <string name="pref_show_join_leave_summ">Display a message when someone joins or leaves the channel</string>
    <string name="action_settings">Settings</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="pref_highlight">Highlights</string>
    <string name="pref_highlight_summ">Enter words to highlight, separated by semicolon</string>
    <string name="pref_appearance_settings">Appearance</string>
    <string name="pref_message_font_size">Message font size</string>
    <string name="pref_message_font_size_summ">Normal</string>
    <string-array name="pref_message_font_size_entries">
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
        <item>HUGE-ASS</item>
    </string-array>
    <string-array name="pref_message_font_size_values">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>20</item>
    </string-array>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="pref_nickname">Nickname</string>

    <!-- Error strings -->
    <string name="ERR_401">No user named</string>
    <string name="ERR_402">No such server</string>
    <string name="ERR_405">Too many channels</string>
    <string name="ERR_432">Invalid characters</string>
    <string name="ERR_433">Nickname already in use</string>
    <string name="ERR_443">User already in channel</string>
    <string name="ERR_464">Incorrect password</string>
    <string name="ERR_471">Channel %s is full</string>
    <string name="ERR_473">Channel %s is invite-only</string>
    <string name="ERR_474">You\'re banned from the channel %s</string>
</resources>
