<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_join_channel"
        android:title="@string/join_channel"/>
    <item android:id="@+id/action_leave_channel"
        android:title="@string/action_leave_channel"/>
    <!--<item android:id="@+id/action_user_list"-->
    <!--android:title="@string/action_userlist"/>-->
    <item android:id="@+id/action_change_nick"
        android:title="@string/action_change_nick"/>
    <item android:id="@+id/action_invite_user"
        android:title="@string/action_invite_user"/>
    <item android:id="@+id/action_search"
        android:title="@string/action_settings" />
    <item android:id="@+id/search_messages"
        android:title="@string/search_messages"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/highlightbadge"
        android:actionLayout="@layout/actionbar_highlight_button"
        android:showAsAction="always">
    </item>
</menu>