<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <EditText
            android:id="@+id/dialog_serverconnect_server"
            android:text="se.chalmers.dat255.ircsex.irc.chalmers.it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_server"
            android:inputType="textVisiblePassword" />
    <EditText
            android:id="@+id/dialog_serverconnect_port"
            android:text="6667"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_port"
            android:inputType="number" />
    <EditText
            android:id="@+id/dialog_serverconnect_nickname"
            android:text="hets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_nickname"
            android:inputType="textVisiblePassword" />
</LinearLayout>