<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_whois_real_name"
            android:textSize="16dp"
            android:textColor="#888888"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dp" />
    <TextView
            android:id="@+id/dialog_whois_realname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_whois_idle_time"
            android:textSize="16dp"
            android:textColor="#888888"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dp" />
    <TextView
            android:id="@+id/dialog_whois_idle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_whois_connected_to"
            android:textSize="16dp"
            android:textColor="#888888"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dp" />
    <TextView
            android:id="@+id/dialog_whois_channels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="112dp"
            android:scrollbars="vertical"
            android:textSize="17dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp" />
</LinearLayout>